--- a/docker-compose.nginx.yml
+++ b/docker-compose.nginx.yml
@@ -8,5 +8,5 @@ services:
     logging:
       driver: syslog
       options:
-        syslog-address: "tcp://syslog_host:5140"
+        syslog-address: "tcp://0.0.0.0:5140"
         tag: "nginx"
