--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,10 +1,16 @@
 input {
-	syslog {
+	tcp {
 		port => 5140
 	}
 }
 
 ## Add your filters / logstash plugins configuration here
+
+filter {
+  json {
+    source => "message"
+  }
+}
 
 output {
 	elasticsearch {
